--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONDODB=mongodb+srv://admin:admin@cluster0.iaujapa.mongodb.net/canada-project?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://admin:admin@cluster0.iaujapa.mongodb.net/canada-project?retryWrites=true&w=majority&appName=Cluster0
