--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 MONGODB_URI=mongodb+srv://admin:admin@cluster0.iaujapa.mongodb.net/canada-project?retryWrites=true&w=majority&appName=Cluster0
+
+CLERK_WEBHOOK_SECRET=whsec_GBX9V+VCxPLj2db07zPr8nxFHYVyRpo8
