--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongodb": "^6.18.0",
     "mongoose": "^8.18.0",
     "nodemon": "^3.1.10",
+    "stripe": "^18.5.0",
     "svix": "^1.74.1"
   }
 }
