--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@vapi-ai/server-sdk": "^0.10.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "form-data": "^4.0.4",
     "mongodb": "^6.18.0",
     "mongoose": "^8.18.0",
+    "multer": "^2.0.2",
     "node-fetch": "^3.3.2",
     "nodemon": "^3.1.10",
     "stripe": "^18.5.0",
